--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tailfd",
   "description": "Tail a file. This will continue to work even if a file is unlinked rotated or truncated. It is also ok if the path doesnt exist before watching it",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "author": "Ryan Day <soldair@gmail.com>",
   "keywords": [
     "watch",
@@ -27,6 +27,7 @@
     "node": ">=0.6.0"
   },
   "dependencies": {
-	"watchfd":"~0.0.12"
-  }
+	  "watchfd":"~0.0.12"
+  },
+  "license" : "MIT/X11"
 }
